--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ default-run = "dsa"
 clap = { version = "4.5.51", features = ["derive"] }
 
 # Auto-generated binary entries
+
+# Auto-generated binary entries
 [[bin]]
 name = "two_sum"
 path = "01-arrays/two_sum.rs"
