--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ default-run = "dsa"
 [dependencies]
 clap = { version = "4.5.51", features = ["derive"] }
 
+[[bin]]
+name = "practice"
+path = "practice/practice.rs"
+
 # Auto-generated binary entries
 [[bin]]
 name = "best_time_stocks"
@@ -21,6 +25,10 @@ name = "plus_one"
 path = "01-arrays/plus_one.rs"
 
 [[bin]]
+name = "product_except_self"
+path = "01-arrays/product_except_self.rs"
+
+[[bin]]
 name = "remove_duplicates"
 path = "01-arrays/remove_duplicates.rs"
 
@@ -28,6 +36,3 @@ path = "01-arrays/remove_duplicates.rs"
 name = "two_sum"
 path = "01-arrays/two_sum.rs"
 
-[[bin]]
-name = "practice"
-path = "practice/practice.rs"
