--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ default-run = "dsa"
 clap = { version = "4.5.51", features = ["derive"] }
 
 
+[[bin]]
+name = "practice"
+path = "practice/practice.rs"
+
 # Auto-generated binary entries
 [[bin]]
 name = "best_time_stocks"
@@ -34,9 +38,10 @@ name = "remove_duplicates"
 path = "01-arrays/remove_duplicates.rs"
 
 [[bin]]
+name = "three_sum"
+path = "01-arrays/three_sum.rs"
+
+[[bin]]
 name = "two_sum"
 path = "01-arrays/two_sum.rs"
 
-[[bin]]
-name = "practice"
-path = "practice/practice.rs"
